<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dmitriy.probationtwo.DownloaderActivity">

<TextView
        android:id="@+id/text_view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/picture_downloader"
        android:textSize="@dimen/default_size" />

    <TextView
        android:id="@+id/text_view_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_view_title"
        android:layout_below="@+id/text_view_title"
        android:layout_marginTop="38dp"
        android:text="@string/status"
        android:textSize="@dimen/abc_action_bar_title_text_size" />

    <TextView
        android:id="@+id/text_view_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/text_view_status"
        android:layout_alignBottom="@+id/text_view_status"
        android:layout_toRightOf="@+id/text_view_status"
        android:text="@string/idle"
        android:textSize="@dimen/abc_action_bar_title_text_size" />

    <Button
        android:id="@+id/button_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/progress_bar_download"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/progress_bar_download"
        android:layout_marginBottom="38dp"
        android:text="@string/download" />

    <ProgressBar
        android:id="@+id/progress_bar_download"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_status"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:progress="@integer/abc_max_action_buttons"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button_open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_download"
        android:layout_alignBottom="@+id/button_download"
        android:layout_alignLeft="@+id/button_download"
        android:layout_alignRight="@+id/button_download"
        android:text="@string/open"
        android:visibility="invisible" />
    </RelativeLayout>